# Binance-wallet-status-alerter

./: Cargo.toml  README.md  install_service.sh
src/: alerter copy.rs  alerter.rs  coin_wallet.rs  main.rs
