[package]
name = "bn-wallet-status-alerter"
version = "1.0.0"
authors = ["Remi Gastaldi <remi.gastaldi@protonmail.com>"]
edition = "2018"

repository = "https://github.com/remigastaldi/Avax-Binance_asset_notifier/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5", features = ["macros"] }
# log = "0.4"
# pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "time"] }

tokio-binance = { git = "https://github.com/remigastaldi/tokio-binance" }
serde_json = "1.0.62"
chrono = "0.4"
clap = "2.33.3"